--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,10 +12,17 @@
       Paina
     </button>
   </form>
+  
   <form action="/reset" method="POST">
     <button type="submit">
       Nollaa
     </button>
+  </form>
+
+  <form action="/set" method="POST">
+    <label for="value">Aseta arvo: </label>
+    <input type="text" id="value" name="value" />
+    <button type="submit">Aseta</button>
   </form>
 </body>
 </html>
